docker/apollo/apollo-configservice-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apollo-service-pro-apollo-configservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1600"
    nginx.ingress.kubernetes.io/proxy_connect_timeout: "1600"
spec:
  rules:
  - host: apollo-service-pro-apollo-configservice.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apollo-service-pro-apollo-configservice
            port:
              number: 8080
